--- a/src/components/login.css
+++ b/src/components/login.css
@@ -93,3 +93,20 @@
     }
   }
   
+
+  /* Error message styling */
+.error-message {
+  position: relative;
+  color: #ff4d4d; /* Bright red color for error message */
+  font-size: 1rem; /* Slightly smaller font size */
+  bottom: 15px;
+  /* margin-top: 0px; Space above error message */
+  text-align: center; /* Center the error message */
+  display: block;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2); /* Subtle text shadow */
+}
+
+#hh{
+  position: relative;
+  bottom: 20px;
+}
